--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
   align-items: center;
   display: flex;
   font-size: 20px;
-  justify-content: flex-start;
+  justify-content: space-between;
   min-height: 20%;
   padding: 10px;
   width: 100%;
@@ -247,4 +247,18 @@ ul {
 }
 .hidden {
   display: none;
+}
+#saveBut {
+  align-items: center;
+  background-color: rgb(189, 172, 18);
+  border: 1px solid rgb(31, 29, 1);
+  display: flex;
+  justify-content: center;
+  font-weight: 700;
+  opacity: 0.8;
+  width: 5%;
+  height: 40px;
+}
+#saveBut:hover {
+  opacity: 1;
 }
